--- a/index.html
+++ b/index.html
@@ -4,4 +4,4 @@
    body { margin: 0; }
 </style>
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/PCmZSlsic1o?autoplay=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/live_stream?channel=UCz2DtqlSXZvWKAr1RG7cRkw&autoplay=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
